fixing full bleed image

--- a/docroot/themes/custom/ucsf/assets/css/style.css
+++ b/docroot/themes/custom/ucsf/assets/css/style.css
@@ -7532,6 +7532,8 @@ body.loading .quicklinks {
       .full-bleed-image figcaption {
         padding-left: 17%;
         padding-right: 17%; } }
+  .full-bleed-image img {
+    width: 100%; }
 
 .article-medium-banner {
   position: static;
